# PixelShrink-web

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: ComparePage-Byr7_e0H.js  ComparePage-C9qre4lo.js  ComparePage-CI-cWykD.js  ComparePage-CJgVzLFs.js  ComparePage-CO69mgac.js  ComparePage-DIWk5N8H.js  ComparePage-DWuGtxIk.js  ComparePage-rmVxNmJB.js  CompressPage-BDW6meiw.js  CompressPage-BLT1Jw7E.js  CompressPage-BOH3ZuG9.js  CompressPage-CEs3jYUD.js  CompressPage-DLhG0Py5.js  CompressPage-DjxIln47.js  CompressPage-Sd0P5n4Q.js  CompressPage-pDpMqGpC.js  HomePage-BHKC8r_D.js  HomePage-BJu1sMoQ.js  HomePage-BiVC5kZB.js  HomePage-DCyMyDi3.js  HomePage-DZ4ST9Gw.js  HomePage-Dz1zVJI4.js  HomePage-dO5XUv_g.js  HomePage-pM__BQxj.js  imageUtils--Zbchocc.js  index-5IdxsG76.js  index-DIu02hA1.js  index-DUuKXLfe.js  index-DXIPU8NB.js  index-DfJNBuAm.js  index-FWNcqecG.js  index-IC5zmEuE.js  index-t4KVaTmk.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ComparisonSlider.tsx  DropZone.tsx  ImageFileList.tsx  ProgressBar.tsx  QualityPresets.tsx
src/hooks/: useCompression.ts  useTheme.ts
src/licensing/: config.ts
src/pages/: ComparePage.tsx  CompressPage.tsx  HomePage.tsx
src/services/: compressionService.ts
src/utils/: imageUtils.ts
