[package]
name = "pixelshrink"
version = "0.1.0"
description = "Image optimizer. Batch compression with quality presets."
authors = ["Euthenia Studio"]
edition = "2021"

[lib]
name = "pixelshrink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
